Update .env.local for MCP and Supabase configurations: add placeholders for API keys and enhance localization settings for the Thai market.

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,12 @@
-# MCP Configuration
-MCP_API_URL=https://api.example.com
-MCP_API_KEY=your_api_key_here
+# MCP Configuration (optional)
+MCP_API_URL=https://api.mcp.example.com
+MCP_API_KEY=YOUR_MCP_API_KEY_PLACEHOLDER
 
-# Supabase Configuration
-SUPABASE_URL=https://your.supabase.co
-SUPABASE_PUBLIC_ANON_KEY=your_public_anon_key_here
+# Supabase Configuration (จำเป็นสำหรับรันโปรเจกต์)
+# คัดลอกจาก Supabase Dashboard: Project Settings → API
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY_PLACEHOLDER
+
+# Application settings
+NEXT_PUBLIC_CURRENCY=฿
+NEXT_PUBLIC_LOCALE=th_TH
